css/all.css
@charset "UTF-8";
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;1,300&display=swap");
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

.title {
  display: flex;
  align-items: center;
  justify-content: center;
}

.title::before, .title::after {
  content: "";
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: #C1C1C1;
}

h2 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 12px;
}

h2::before, h2::after {
  content: "";
  flex: 0 0 100px;
  height: 1px;
  background: #C1C1C1;
}
@media (max-width: 768px) {
  h2::before, h2::after {
    flex: 0 0 50px;
  }
}

.portfolio-content::after {
  content: "";
  display: block;
  width: 100%;
  height: 1px;
  background-color: #F1F1F1;
}
@media (max-width: 768px) {
  .portfolio-content::after {
    display: none;
  }
}

.button::after {
  content: "";
  width: 16px;
  height: 16px;
  background-image: url("../assets/arrow.svg");
  background-repeat: no-repeat;
  margin-left: 8px;
}

.grey-box {
  background-color: rgba(128, 128, 128, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  height: 100%;
}
@media (max-width: 768px) {
  .grey-box {
    background-color: white;
    flex-direction: column;
    width: 100%;
    height: 188px;
  }
}

.dots li span {
  display: block;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #E9E9E9;
}
@media (max-width: 768px) {
  .dots li span {
    display: none;
  }
}

.dots li.active span {
  background-color: #000000;
}

*, *::before, *::after {
  box-sizing: border-box;
}

body {
  font-family: "Noto Sans";
}

/* header */
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 32px 312px;
}
@media (max-width: 768px) {
  header {
    padding: 0;
  }
}

header img, footer img {
  width: 90px;
  height: 40px;
}

.nav-list {
  display: flex;
  justify-content: center;
  gap: 40px;
}
@media (max-width: 768px) {
  .nav-list {
    display: none;
  }
}

.mobile-menu {
  display: none;
}
@media (max-width: 768px) {
  .mobile-menu {
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1000;
    background: #fff;
  }
  .mobile-menu input {
    display: none;
  }
  .mobile-menu label {
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
  }
  .mobile-menu label .mobile-logo {
    width: 90px;
    height: 40px;
  }
  .mobile-menu label .hamburger-icon {
    width: 30px;
    height: 20px;
  }
  .mobile-menu .mobile-nav-list {
    overflow: hidden;
    max-height: 0;
    transition: max-height 0.5s;
    background: #fff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    margin: 0;
    padding: 0;
  }
  .mobile-menu .mobile-nav-list a {
    display: block;
    padding: 14px 20px;
    text-decoration: none;
    color: #000000;
    font-size: 20px;
    text-align: center;
  }
  .mobile-menu .mobile-nav-list a.active {
    font-weight: bold;
  }
  .mobile-menu:has(input:checked) .mobile-nav-list {
    max-height: 50%;
    transition: max-height 1s;
    overflow-y: auto;
  }
}

.nav-list a {
  cursor: pointer;
  text-decoration: none;
  color: #000000;
  font-size: 16px;
}

.nav-list a.active {
  font-weight: bold;
}

/* 第一部分 */
.hero {
  display: flex;
}
@media (max-width: 768px) {
  .hero {
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
    text-align: center;
  }
}

.hero-content {
  width: 40%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}
@media (max-width: 768px) {
  .hero-content {
    width: 60%;
  }
}

.hero-img {
  width: 60%;
}
@media (max-width: 768px) {
  .hero-img {
    width: 100%;
    margin-top: 40px;
  }
}

h1 {
  font-size: 40px;
  font-weight: bold;
  color: #3B3B3B;
  padding-bottom: 24px;
}
@media (max-width: 768px) {
  h1 {
    font-size: 32px;
    padding-top: 40px;
    padding-bottom: 40px;
  }
}

.intro p {
  font-size: 20px;
  color: #5B5B5B;
  line-height: 30px;
  padding-bottom: 8px;
}

.intro p .highlight {
  background-image: url("../assets/Vector.png");
  background-repeat: no-repeat;
  background-position: center bottom; /* 圖片位置在中央底部 */
  background-size: 100% auto; /* 橫向撐滿文字寬度 */
  padding-bottom: 4px; /* 確保底部有空間顯示圖片 */
}

.intro .specialties {
  font-size: 16px;
  color: #C1C1C1;
  padding-top: 16px;
  line-height: 24px;
}

.intro ul {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 16px;
  padding-top: 60px;
}
@media (max-width: 768px) {
  .intro ul {
    justify-content: center;
    padding-top: 24px;
  }
}

.intro ul li {
  width: 56px;
  height: 56px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.intro ul img {
  width: 70%;
}

/* 第二部分 */
.works {
  padding-top: 80px;
}

h2 {
  font-size: 32px;
  font-weight: bold;
  color: #3B3B3B;
}
@media (max-width: 768px) {
  h2 {
    font-size: 24px;
  }
}
/* ... */

